@@ -1,4 +1,7 @@
 2012-08-11 dschulze@adobe.com
+    Added 'mask-origin'.
+
+2012-08-11 dschulze@adobe.com
     Added more properties from the implementation of CSS mask in WebKit.
 
 2012-08-10 dschulze@adobe.com
